--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -75,26 +75,25 @@ Nadav est co-founder de Wix et nous présente son nouveau projet, un IDE visuel 
 ---
 
 - 📖 Beta docs: [team page updated](https://twitter.com/reactjs/status/1601328677677338624) + [useTransition demo](https://twitter.com/dan_abramov/status/1600709819648069632) + [useSyncExternalStore API ref](https://twitter.com/dan_abramov/status/1600530747550564354)
+- 📖 [New Supabase Docs, built with Next.js](https://supabase.com/blog/new-supabase-docs-built-with-nextjs): la doc de Supabase migre de Docusaurus vers Next.js, suite aux besoins grandissants de faire du sur mesure. Ils donnent tout de même un retour d'expérience très positif sur Docusaurus.
 - 📖 [React Router website repository public](https://twitter.com/remix_run/status/1600979694622367744)
 - 📖 [React-Spring - New doc site](https://twitter.com/_josh_ellis_/status/1602253329526128641)
-- 📖 [New Supabase Docs, built with Next.js](https://supabase.com/blog/new-supabase-docs-built-with-nextjs)
-- 📜 [Integrate Next.js and Storybook automatically](https://storybook.js.org/blog/integrate-nextjs-and-storybook-automatically/) + https://twitter.com/storybookjs/status/1600912626040524801
-- 📜 [Optimizing Web Fonts in Next.js 13](https://www.lydiahallie.io/blog/optimizing-webfonts-in-nextjs-13) + https://twitter.com/lydiahallie/status/1601247706307256323
-- 📜 [Migrating a large, open-source React application to Next.js and Vercel](https://vercel.com/blog/migrating-a-large-open-source-react-application-to-next-js-and-vercel) + https://twitter.com/rauchg/status/1600913007965413376
-- 📜 [Using Path Matching in React Router](https://www.taniarascia.com/path-matching-in-react-router/)
+- 📜 [Integrate Next.js and Storybook automatically](https://storybook.js.org/blog/integrate-nextjs-and-storybook-automatically/): présente le fonctionnement du support automatique de Next.js via la nouvelle [Framework API](https://storybook.js.org/blog/framework-api/) qui arrive dans Storybook 7 (maintenant en [beta](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-beta.0)). Storybook est capable de mieux comprendre votre projet Next.js. Plus besoin d'ajouter des décorateurs pour le support de la navigation ou des composants Link et Image. Le support va continuer de s'améliorer dans le temps: Server Components, next/font...
+- 📜 [Optimizing Web Fonts in Next.js 13](https://www.lydiahallie.io/blog/optimizing-webfonts-in-nextjs-13): probablement l'article le mieux illustré sur les font layout shifts. Explique à la fin comment Next.js optimise tout ça pour nous.
+- 📜 [Migrating a large, open-source React application to Next.js and Vercel](https://vercel.com/blog/migrating-a-large-open-source-react-application-to-next-js-and-vercel): Vercel fait un POC de migration du site open-source de la BBC, pour s'amuser 😄 Ils mettent en avant les avantages obtenus rien qu'en étant sur une stack Next.js.
 - 📜 [The Evolution of urql](https://formidable.com/blog/2022/evolution-of-urql/)
 - 📜 [Avoid These Common Pitfalls Of React useState](https://profy.dev/article/react-usestate-pitfalls)
 - 📜 [Publishing Docusaurus to dev.to with the dev.to API](https://dev.to/johnnyreilly/publishing-docusaurus-to-devto-with-the-devto-api-9bg)
 - 📜 [An Introduction To RedwoodJS](https://blog.openreplay.com/an-intro-to-redwoodjs/)
+- 📜 [Using Path Matching in React Router](https://www.taniarascia.com/path-matching-in-react-router/)
 - 📜 [Testing API Calls in useEffect using React Testing Library and Jest](https://www.taniarascia.com/how-to-test-useeffect-api-call/)
 - 💬 [Improve React Query hydration, Streaming SSR & Server Components](https://github.com/TanStack/query/discussions/4623)
 - 🐦 [Xuan Huang - "Forget is in good hands as we now have a team behind it"](https://twitter.com/Huxpro/status/1601345567493214208): Xuan mentionne aussi son départ de Meta
 - 🎨 [React-Three-Editor demo - Threejs Journey scene](https://twitter.com/0xca0a/status/1601315795006410752)
 - 🐦 ["I fixed vanilla-extract/sprinkles using a vite plugin"](https://twitter.com/astahmer_dev/status/1601246126396428289): nouveau plugin Vite qui pourrait réduire significativement le CSS émis par Vanilla-Extract / Sprinkles
 - 🐦 [Ryan Florence - "Next.js isn't really OSS"](https://twitter.com/ryanflorence/status/1600526114010845184)
-- 📦 [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): bientôt une [alternative plus légère à Three.js/R3f](https://twitter.com/0xca0a/status/1602286391777546242)?
+- 📦 [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): bientôt une [alternative plus légère à Three.js et React-Three-Fiber](https://twitter.com/0xca0a/status/1602286391777546242)?
 - 📦 [Remix 1.8](https://github.com/remix-run/remix/releases/tag/remix%401.8.0): le "React-Router-ing" progresse bien
-- 📦 [Storybook 7.0 beta](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-beta.0)
 - 🎥 [Modern Component Library with React & Storybook](https://www.youtube.com/playlist?list=PLKBvDYynKmlWa59k8pnw-EHac2_miPagh)
 - 🎥 [MaterialUI + Qwikify demo](https://twitter.com/Steve8708/status/1601257653367209984)
 
@@ -121,9 +120,9 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 ## 📱 React-Native {#react-native}
 
 - 🎨 [@expo-image demo](https://twitter.com/tsapeta/status/1600888339619799042): Software Mansion travaille sur une alternative à react-native-fast-image
-- 📦 [React-Native-Paper 5.0](https://www.callstack.com/blog/react-native-paper-5-0)
-- 📦 [android-performance-profiler](https://twitter.com/almouro/status/1600887206952198144): nouvelle API disponible
+- 📦 [React-Native-Paper 5.0](https://www.callstack.com/blog/react-native-paper-5-0): support de Material Design 3 "Meterial You", mais conserve aussi la possibilité de rester sur Material Design 2. Il y a de nouveaux composants, et la possibilité d'intégrer facilement la lib avec React-Navigation.
 - 📦 [React-Native-Skia-Gesture demo](https://twitter.com/reactiive_/status/1600494808048467973): detection de gestures pour les éléments d'un canvas Skia
+- 📦 [android-performance-profiler](https://twitter.com/almouro/status/1600887206952198144): nouvelle API disponible
 - 📦 [expo-router@next - Shared Routes + Layout Clones (experimental)](https://twitter.com/Baconbrix/status/1601362300891328513)
 - 📜 [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/)
 - 🔗 [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog React-Native sur le site de Microsoft.
@@ -151,14 +150,11 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-<Todo />
-
 ---
 
 ## 🔀 Autre {#other}
 
-[Optimize Interaction to Next Paint](https://web.dev/optimize-inp/) + https://twitter.com/malchata/status/1600896945865760770
-
+- [Optimize Interaction to Next Paint](https://web.dev/optimize-inp/) + https://twitter.com/malchata/status/1600896945865760770
 - [Ecma International welcomes new members](https://www.ecma-international.org/news/ecma-international-welcomes-new-members-6/): dont Shopify et Vercel
 - [Zod 3.20](https://twitter.com/colinhacks/status/1602238724120924160): content de voir la coercion arriver, très pratique pour convertir certains params query-string (pagination) en nombres automatiquement.
 - [2022 In Review: What’s New In Web Performance?](https://www.debugbear.com/blog/2022-in-web-performance)
