--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -157,32 +157,16 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 - [Optimize Interaction to Next Paint](https://web.dev/optimize-inp/) + https://twitter.com/malchata/status/1600896945865760770
 - [Ecma International welcomes new members](https://www.ecma-international.org/news/ecma-international-welcomes-new-members-6/): dont Shopify et Vercel
 - [Zod 3.20](https://twitter.com/colinhacks/status/1602238724120924160): content de voir la coercion arriver, très pratique pour convertir certains params query-string (pagination) en nombres automatiquement.
-- [2022 In Review: What’s New In Web Performance?](https://www.debugbear.com/blog/2022-in-web-performance)
+- [Vitest 0.27.7](https://github.com/vitest-dev/vitest/releases/tag/v0.25.7): support Vite 4
+- [Tauri Mobile Alpha Release](https://tauri.app/blog/2022/12/09/tauri-mobile-alpha): si je comprends bien c'est de la WebView, nouveau concurrent à Cordova/Capacitor? 🤔
 - [New npm features for secure publishing and safe consumption](https://github.blog/2022-12-06-new-npm-features-for-secure-publishing-and-safe-consumption/): enfin un code explorer sur le site npm!
+- [2022 In Review: What’s New In Web Performance?](https://www.debugbear.com/blog/2022-in-web-performance)
 - [Bun 0.3.0](https://bun.sh/blog/bun-v0.3.0)
 - [Alma - a digital playground for generative graphics](https://twitter.com/emilwidlund/status/1600815398672211969)
 - [TypeScript: Should you use Types or Interfaces?](https://www.youtube.com/watch?v=zM9UPcIyyhQ)
-- [Tauri Mobile Alpha Release](https://tauri.app/blog/2022/12/09/tauri-mobile-alpha)
-- [Vitest 0.27.7](https://github.com/vitest-dev/vitest/releases/tag/v0.25.7): support Vite 4
-- [GitHub - Release Radar · October 2022 Edition](https://github.blog/2022-12-09-release-radar-october-2022/)
-- [Inside the mind of a frontend developer: Article layout](https://ishadeed.com/article/inside-frontend-developer-mind-article-layout/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/ThePrimeagen/status/1600305901633536001
-
-https://twitter.com/QwikDev/status/1602231562644373504
-
-https://twitter.com/ThePrimeagen/status/1602060279868694528
-
-https://twitter.com/ThePrimeagen/status/1601570856265650176
-
-https://twitter.com/AdamRackis/status/1601405579792068608
-
-https://twitter.com/ken_wheeler/status/1600690335650566144
-
-https://twitter.com/wesbos/status/1600557271569809416
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/128/meme.jpg)](https://twitter.com/ThePrimeagen/status/1601570856265650176)
