--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -94,6 +94,7 @@ Nadav est co-founder de Wix et nous présente son nouveau projet, un IDE visuel 
 - 🐦 [Ryan Florence - "Next.js isn't really OSS"](https://twitter.com/ryanflorence/status/1600526114010845184)
 - 📦 [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): bientôt une [alternative plus légère à Three.js et React-Three-Fiber](https://twitter.com/0xca0a/status/1602286391777546242)?
 - 📦 [Remix 1.8](https://github.com/remix-run/remix/releases/tag/remix%401.8.0): le "React-Router-ing" progresse bien
+- 📦 [Chakra UI Figma Kit](https://twitter.com/chakra_ui/status/1602683717830512641)
 - 🎥 [Modern Component Library with React & Storybook](https://www.youtube.com/playlist?list=PLKBvDYynKmlWa59k8pnw-EHac2_miPagh)
 - 🎥 [MaterialUI + Qwikify demo](https://twitter.com/Steve8708/status/1601257653367209984)
 
@@ -125,10 +126,12 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 - 📦 [android-performance-profiler](https://twitter.com/almouro/status/1600887206952198144): nouvelle API disponible
 - 📦 [expo-router@next - Shared Routes + Layout Clones (experimental)](https://twitter.com/Baconbrix/status/1601362300891328513)
 - 📜 [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/): nouvelle version de l'outil dep-check de Microsoft qui permet d'assurer que son monorepo utilise les bonnes versions de package. Renommé à cause d'un conflit avec depcheck. L'outil peut maintenant être plus facilement utilisé sur un projet autre que React-Native.
-- 🔗 [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog React-Native sur le site de Microsoft.
+- 🔗 [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog dédié à React-Native sur le site de Microsoft.
 - 🎙️ [RNR 253 - We React to News: Kotlin's got a new daddy](https://reactnativeradio.com/episodes/rnr-253-we-react-to-news)
 - 🎥 [File-based navigation for Expo and React Native](https://www.youtube.com/watch?v=PW4-79MgSO0)
 - 📖 [Expo docs updates](https://twitter.com/amanhimself/status/1601177437546897408)
+- 📜 [Introducing: Maestro Studio](https://blog.mobile.dev/introducing-maestro-studio-96454c7ca98a): pour créer des tests end-2-end black box via une interface
+- 🐦 ["Apple is preparing to allow alternative app stores and side-loading on iOS"](https://twitter.com/markgurman/status/1602744671737942016) + ["And allow non-Safari browser engines"](https://twitter.com/cramforce/status/1602765963937472513): cela semble important pour React-Native même si pour l'instant cela semble limité à l'Europe.
 
 ---
 
@@ -154,13 +157,14 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🔀 Autre {#other}
 
-- [Optimize Interaction to Next Paint](https://web.dev/optimize-inp/) + https://twitter.com/malchata/status/1600896945865760770
+- [Optimize Interaction to Next Paint](https://web.dev/optimize-inp/): les devs Google nous expliquent comment améliorer les performances sur les interactions de nos apps (la nouvelle métrique INP). Cela semble particulièrement intéressant pour nos SPAs React.
+- [2022 In Review: What’s New In Web Performance?](https://www.debugbear.com/blog/2022-in-web-performance): une belle vue d'ensemble des nouveautés webperf de 2022. Les prévisions 2023 indiquent des travaux pour mieux mesurer les performances des SPA, au lieu de se contenter des métriques du chargement initial de la page. Je découvre le repo [soft-navigations](https://github.com/WICG/soft-navigations)
 - [Ecma International welcomes new members](https://www.ecma-international.org/news/ecma-international-welcomes-new-members-6/): dont Shopify et Vercel
-- [Zod 3.20](https://twitter.com/colinhacks/status/1602238724120924160): content de voir la coercion arriver, très pratique pour convertir certains params query-string (pagination) en nombres automatiquement.
+- [Zod 3.20](https://twitter.com/colinhacks/status/1602238724120924160): content de voir la coercion arriver, très pratique pour convertir certains params query-string (exemple: ?pageSize=10) en nombres automatiquement.
 - [Vitest 0.27.7](https://github.com/vitest-dev/vitest/releases/tag/v0.25.7): support Vite 4
 - [Tauri Mobile Alpha Release](https://tauri.app/blog/2022/12/09/tauri-mobile-alpha): si je comprends bien c'est de la WebView, nouveau concurrent à Cordova/Capacitor? 🤔
 - [New npm features for secure publishing and safe consumption](https://github.blog/2022-12-06-new-npm-features-for-secure-publishing-and-safe-consumption/): enfin un code explorer sur le site npm!
-- [2022 In Review: What’s New In Web Performance?](https://www.debugbear.com/blog/2022-in-web-performance)
+- [WebKit Features in Safari 16.2](https://webkit.org/blog/13591/webkit-features-in-safari-16-2/)
 - [Bun 0.3.0](https://bun.sh/blog/bun-v0.3.0)
 - [Alma - a digital playground for generative graphics](https://twitter.com/emilwidlund/status/1600815398672211969)
 - [TypeScript: Should you use Types or Interfaces?](https://www.youtube.com/watch?v=zM9UPcIyyhQ)
