--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -11,6 +11,8 @@ Salut à tous !
 
 Cette semaine, je vous propose de découvrir **[Le Courrier Du Hacker](https://lecourrierduhacker.com/?utm_source=reacthebdo)**, la newsletter de [Carl Chenet](https://twitter.com/carl_chenet) (voir la [dernière édition](https://lecourrierduhacker.com/numeros/numero-202?utm_source=reacthebdo)). Vous y trouverez du contenu 100% en français 🇫🇷 sur des sujets variés autour du logiciel libre et de l'Open Source.
 
+On rentre dans la période des fêtes, et les bloggers React réduisent la cadence. On a tout de même quelques releases et articles sympa à découvrir. J'ai beaucoup aimé celui sur les font layout shifts.
+
 <!-- truncate -->
 
 **💡 [Consulter cette newsletter sur Twitter](https://slo.im/thread) - format visuel 🎨**
@@ -120,17 +122,17 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 
 ## 📱 React-Native {#react-native}
 
+- 📜 [React Native Paper 5.0 – What’s New?](https://www.callstack.com/blog/react-native-paper-5-0): support de Material Design 3 "Meterial You", mais conserve aussi la possibilité de rester sur Material Design 2. Il y a de nouveaux composants, et la possibilité d'intégrer facilement la lib avec React-Navigation.
+- 📜 [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/): nouvelle version de l'outil dep-check de Microsoft qui permet d'assurer que son monorepo utilise les bonnes versions de package. Renommé à cause d'un conflit avec depcheck. L'outil peut maintenant être plus facilement utilisé sur un projet autre que React-Native.
+- 📜 [Introducing: Maestro Studio](https://blog.mobile.dev/introducing-maestro-studio-96454c7ca98a): pour créer des tests end-2-end black box via une interface
+- 🔗 [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog dédié à React-Native sur le site de Microsoft.
 - 🎨 [@expo-image demo](https://twitter.com/tsapeta/status/1600888339619799042): Software Mansion travaille sur une alternative à react-native-fast-image
-- 📦 [React-Native-Paper 5.0](https://www.callstack.com/blog/react-native-paper-5-0): support de Material Design 3 "Meterial You", mais conserve aussi la possibilité de rester sur Material Design 2. Il y a de nouveaux composants, et la possibilité d'intégrer facilement la lib avec React-Navigation.
-- 📦 [React-Native-Skia-Gesture demo](https://twitter.com/reactiive_/status/1600494808048467973): detection de gestures pour les éléments d'un canvas Skia
+- 🎨 [React-Native-Skia-Gesture demo](https://twitter.com/reactiive_/status/1600494808048467973): detection de gestures pour les éléments d'un canvas Skia
 - 📦 [android-performance-profiler](https://twitter.com/almouro/status/1600887206952198144): nouvelle API disponible
 - 📦 [expo-router@next - Shared Routes + Layout Clones (experimental)](https://twitter.com/Baconbrix/status/1601362300891328513)
-- 📜 [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/): nouvelle version de l'outil dep-check de Microsoft qui permet d'assurer que son monorepo utilise les bonnes versions de package. Renommé à cause d'un conflit avec depcheck. L'outil peut maintenant être plus facilement utilisé sur un projet autre que React-Native.
-- 🔗 [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog dédié à React-Native sur le site de Microsoft.
 - 🎙️ [RNR 253 - We React to News: Kotlin's got a new daddy](https://reactnativeradio.com/episodes/rnr-253-we-react-to-news)
 - 🎥 [File-based navigation for Expo and React Native](https://www.youtube.com/watch?v=PW4-79MgSO0)
 - 📖 [Expo docs updates](https://twitter.com/amanhimself/status/1601177437546897408)
-- 📜 [Introducing: Maestro Studio](https://blog.mobile.dev/introducing-maestro-studio-96454c7ca98a): pour créer des tests end-2-end black box via une interface
 - 🐦 ["Apple is preparing to allow alternative app stores and side-loading on iOS"](https://twitter.com/markgurman/status/1602744671737942016) + ["And allow non-Safari browser engines"](https://twitter.com/cramforce/status/1602765963937472513): cela semble important pour React-Native même si pour l'instant cela semble limité à l'Europe.
 
 ---
