--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /128
-title: "React Hebdo #128: ..."
+title: "React Hebdo #128: SWR, Vite, Codux, Next.js, Forget, Nylon, Paper, align-deps, INP, Zod, Tauri..."
 authors: [slorber]
 date: 12-13-2022
 image: /img/TWIR_POST.png
@@ -11,7 +11,9 @@ Salut à tous !
 
 Cette semaine, je vous propose de découvrir **[Le Courrier Du Hacker](https://lecourrierduhacker.com/?utm_source=reacthebdo)**, la newsletter de [Carl Chenet](https://twitter.com/carl_chenet) (voir la [dernière édition](https://lecourrierduhacker.com/numeros/numero-202?utm_source=reacthebdo)). Vous y trouverez du contenu 100% en français 🇫🇷 sur des sujets variés autour du logiciel libre et de l'Open Source.
 
-On rentre dans la période des fêtes, et les bloggers React réduisent la cadence. On a tout de même quelques releases et articles sympa à découvrir. J'ai beaucoup aimé celui sur les font layout shifts.
+On rentre dans la période des fêtes, et les bloggers React réduisent la cadence. De mon coté, je vais sauter 2 éditions.
+
+On a tout de même quelques releases et articles sympa à découvrir. J'ai beaucoup aimé celui sur les font layout shifts.
 
 <!-- truncate -->
 
