--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -1,10 +1,9 @@
 ---
 slug: /128
-title: "React Hebdo #128: SWR, Vite, Codux, Next.js, Forget, Nylon, Paper, align-deps, INP, Zod, Tauri..."
+title: "React Hebdo #128: SWR, Vite, Codux, Storybook, Next.js, Forget, Nylon, Paper, align-deps, INP, Zod, Tauri..."
 authors: [slorber]
 date: 12-13-2022
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
