--- a/website/newsletter/128/index.mdx
+++ b/website/newsletter/128/index.mdx
@@ -60,11 +60,6 @@ New major release for the Vercel data-fetching library. Various improvements lis
 
 **[Vite 4](https://vitejs.dev/blog/announcing-vite4.html)**
 
-Vite est un outil frontend qui continue de gagner en popularité. Cette dernière version utilise maintenant Rollup 3, qui simplifie grandement la gestion des assets internes de Vite. Il y a maintenant 2 plugins React avec des tradeoffs différents:
-
-- [vite-plugin-react](https://github.com/vitejs/vite-plugin-react): esbuild + Babel
-- [vite-plugin-react-swc](https://github.com/vitejs/vite-plugin-react-swc): replace Babel par SWC en dev, ce qui semble améliorer le cold start et le HMR
-
 Vite is a frontend tool that keeps growing in popularity. This latest version now uses Rollup 3, which greatly simplifies the management of Vite's internal assets. There are now 2 React plugins with different tradeoffs:
 
 - [vite-plugin-react](https://github.com/vitejs/vite-plugin-react): esbuild + Babel
@@ -100,7 +95,7 @@ Nadav is co-founder of Wix and presents us his new project, a visual IDE for Rea
 - 🎨 [React-Three-Editor demo - Threejs Journey scene](https://twitter.com/0xca0a/status/1601315795006410752)
 - 🐦 ["I fixed vanilla-extract/sprinkles using a vite plugin"](https://twitter.com/astahmer_dev/status/1601246126396428289): new Vite plugin that could significantly reduce the CSS emitted by Vanilla-Extract / Sprinkles
 - 🐦 [Ryan Florence - "Next.js isn't really OSS"](https://twitter.com/ryanflorence/status/1600526114010845184)
-- 📦 [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): something is cooking. Soon, a lightweight [Three.js / React-Three-Fiber alternative?](https://twitter.com/0xca0a/status/1602286391777546242)?
+- 📦 [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): something is cooking. Soon, a lightweight [Three.js / React-Three-Fiber alternative](https://twitter.com/0xca0a/status/1602286391777546242)?
 - 📦 [Remix 1.8](https://github.com/remix-run/remix/releases/tag/remix%401.8.0): the "React-Router-ing" is progressing
 - 📦 [Chakra UI Figma Kit](https://twitter.com/chakra_ui/status/1602683717830512641)
 - 🎥 [Modern Component Library with React & Storybook](https://www.youtube.com/playlist?list=PLKBvDYynKmlWa59k8pnw-EHac2_miPagh)
